# negative-wid-generator

./: CMakeLists.txt  LICENSE  README.MD  main.cpp
